--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
     </div>
   </div>
 
-  <!-- Scripts -->
-  <script src="app.js"></script>
-  <script>if('serviceWorker' in navigator){navigator.serviceWorker.register('sw.js?v=2.3.5');}</script>
+<!-- Scripts -->
+<script src="app-2.3.5.js?v=2.3.5"></script>
+<script>if('serviceWorker' in navigator){navigator.serviceWorker.register('sw.js?v=2.3.3');}</script>
 </body>
 </html>
