--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#6b4f2c">
   <link rel="manifest" href="manifest.json">
-  <title>Meta XP — 2.3.3</title>
+  <title>Meta XP</title>
   <style>
     :root{
       --bg:#17130e; --bg2:#1e1912; --paper:#221b12; --ink:#e8d9b8; --muted:#cbbf9b;
@@ -56,9 +56,6 @@
       <!-- Avatar do personagem -->
       <img id="charAvatar" src="" alt="Avatar"
            style="width:48px; height:48px; border-radius:8px; border:2px solid var(--accent); display:none;">
-
-      <!-- Selo XP -->
-      <div class="seal">XP</div>
 
       <!-- Nome e nível -->
       <div style="flex:1;">
